# python_template

./: LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
python_template/: example.py  test.py
python_template/test/: test_example.py
scripts/: main.py
tools/docker/: Dockerfile
