[tool.poetry]
name = "python_template"
version = "0.1.0"
description = ""
authors = ["Jordan Hayes <jordanhayes98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
mypy = "^1.8.0"
ruff = "^0.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
